<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_pendaftaran"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#2A2A2A"
            android:textSize="20sp"
            android:layout_marginBottom="24dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_age"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="number"
            tools:ignore="Autofill" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_address"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laki_laki"
                android:textColor="#000000"/>

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/perempuan"
                android:textColor="#000000" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="textPassword"
            tools:ignore="Autofill" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_your_password"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:inputType="textPassword"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:backgroundTint="@color/grey"/>
    </LinearLayout>
</ScrollView>